  raised an error when the client used old an version of libpq.

- Delete empty transactions in batches of 1000 rows instead of all in one
  go, to prevent holding the transaction lock for longer than absolutely
  necessary.

- Fix object reference downloading performance for large Oracle RelStorage
  database during the garbage collection phase of a pack.

1.5.0b2 (2011-03-02)
--------------------

- Better packing based on experience with large databases.  Thanks
  to Martijn Pieters!

    - Added more feedback to the packing process. It'll now report
      during batch commit how much of the total work has been
      completed, but at most every .1% of the total number of
      transactions or objects to process.

    - Renamed the --dry-run option to --prepack and added a
      --use-prepack-state to zodbpack. With these 2 options the
      pre-pack and pack phases can be run separately, allowing re-use
      of the pre-pack analysis data or even delegating the pre-pack
      phase off to a separate server.

    - Replaced the packing duty cycle with a nowait locking strategy.
      The pack operation will now request the commit lock but pauses if
      it is already taken. It releases the lock after every batch
      (defaulting to 1 second processing). This makes the packing
      process faster while at the same time yielding to regular ZODB
      commits when busy.

    - Do not hold the commit lock during pack cleanup while deleting
      rows from the object reference tables; these tables are
      pack-specific and regular ZODB commits never touch these.

- Added an option to control schema creation / updating on startup.
  Setting the ``create-schema`` option to false will let you use
  RelStorage without a schema update.

- Fixed compatibility with PostgreSQL 9.0, which is capable of
  returning a new 'hex' type to the client. Some builds of psycopg2
  return garbage or raise an error when they see the new type. The fix